# motriex-proto-lens

./: .gitignore  CHANGELOG.md  motriex-proto-lens.cabal
src/: Main.hs  marketdata.proto
src/Network/GRPC/: ClientInit.hs  ClientMy.hs  ClientProto.hs
src/Network/GRPC/Client/: Helpers.hs
src/Network/GRPC/HTTP2/: ProtoLens.hs
src/Piesync/Data/ProtoLens/: JSON.hs
src/Processing/: Prices.hs
