cabal-version:      2.4
name:               motriex-proto-lens
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrey Shleger
maintainer:         Andrey.Shleger@yandex.ru
extra-source-files: src/*.proto

custom-setup
  setup-depends:
      Cabal
    , base
    , proto-lens-setup

executable motriex-proto-lens
  main-is:          Main.hs
  default-language: Haskell2010
  hs-source-dirs:   src
  other-modules:
      Paths_motriex_proto_lens
      Proto.Marketdata
      Proto.Marketdata_Fields
      Network.GRPC.HTTP2.ProtoLens
  build-tool-depends:
      proto-lens-protoc:proto-lens-protoc
  autogen-modules:
      Proto.Marketdata
      Proto.Marketdata_Fields
  build-depends:
                  base                      ^>=4.14.3.0
                , binary >= 0.8.8.0
                , bytestring
                , http2-client >= 0.9.0.0
                , http2-client-grpc >= 0.8.0.0
                , http2-grpc-types >= 0.5.0.0
                , lens-family
                , lifted-async >= 0.10.2.2
                , microlens
                , optparse-generic
                , pretty
                , proto-lens
                , proto-lens-arbitrary
                , proto-lens-protobuf-types
                , proto-lens-runtime
                , text >= 1.2.4.1
